Fix spacing between product images, add a product image hover effect, make product subtext more readable.

--- a/styles.css
+++ b/styles.css
@@ -1,199 +1,214 @@
-body {
-    margin: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    /* display: flex;
-    flex-direction: column; */
-    overflow-y: auto;
-    /* min-height: 100vh; */
-}
+    body {
+        margin: 0;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        /* display: flex;
+        flex-direction: column; */
+        overflow-y: auto;
+        /* min-height: 100vh; */
+    }
 
-/* .container {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-} */
+    /* .container {
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
+    } */
 
-.box {
-    min-height: 350px;
-}
+    .box {
+        min-height: 350px;
+    }
 
-.first-section,
-.footer {
-    background-color: #1F2937;
-}
+    .first-section,
+    .footer {
+        background-color: #1F2937;
+    }
 
-.topbar {
-    display: flex;
-    justify-content: space-between;
-    margin: 0 15px
-}
+    .topbar {
+        display: flex;
+        justify-content: space-between;
+        margin: 0 15px;
+    }
 
-.logo {
-    font-size: 35px;
-}
+    .logo {
+        font-size: 35px;
+    }
 
-.headermain {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 15px;
-}
+    .headermain {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 15px;
+    }
 
-.headercontainer {
-    display: flex;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    max-width: 30%;
-    max-width: 20%;
-    flex-wrap: wrap;
-}
+    .headercontainer {
+        display: flex;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+        max-width: 30%;
+        max-width: 20%;
+        flex-wrap: wrap;
+    }
 
-.headercontainer>* {
-    margin: 5px 0;
-}
+    .headercontainer>* {
+        margin: 5px 0;
+    }
 
-.headertext .text {
-    font-size: 18px;
-}
+    .headertext .text {
+        font-size: 18px;
+    }
 
-.headerheading {
-    color: #e5e7eb;
-    font-size: 34px;
-    font-weight: 700;
-}
+    .headerheading {
+        color: #e5e7eb;
+        font-size: 34px;
+        font-weight: 700;
+    }
 
-.headercontainer .button {
-    margin-top: 5px;
-    font-size: 16px;
-    border: 0;
-}
+    .headercontainer .button {
+        margin-top: 5px;
+        font-size: 16px;
+        border: 0;
+    }
 
-ul {
-    padding: 0;
-    margin: 0;
-    color: #e5e7eb;
-    display: flex;
-    gap: 35px;
-    list-style: none;
-    font-size: 22px;
-    justify-content: end;
-    margin-right: 8px;
-}
+    ul {
+        padding: 0;
+        margin: 0;
+        color: #e5e7eb;
+        display: flex;
+        gap: 35px;
+        list-style: none;
+        font-size: 22px;
+        justify-content: end;
+        margin-right: 8px;
+    }
 
-a {
-    text-decoration: none;
-    color: #e5e7eb;
-}
+    a {
+        text-decoration: none;
+        color: #e5e7eb;
+    }
 
-h2 {
-    font-size: 36px;
-    font-weight: bolder;
-    color: #1F2937;
+    h2 {
+        font-size: 36px;
+        font-weight: bolder;
+        color: #1F2937;
 
-}
+    }
 
-.second-section {
-    margin: auto;
-    width: 40%;
-}
+    .second-section {
+        margin: auto;
+        width: 45%;
+    }
 
-.products-row {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
+    .products-row {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
 
-.product-image {
-    width: 150px;
-    height: 150px;
-    border: 4px #3882F6 solid;
-    border-radius: 15px;
-}
+    .product-image {
+        width: 150px;
+        height: 150px;
+        border: 4px #3882F6 solid;
+        border-radius: 15px;
+    }
 
+    .product-header {
+        text-align: center;
+    }
 
-.third-section {
-    background-color: #e5e7eb;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
+    .product-subtext {
+        text-align: center;
+        text-wrap: wrap;
+        color: #657087;
+        width: 150px;
+    }
 
-.quotetext {
-    font-size: 28px;
-    font-style: italic;
-    font-weight: lighter;
-    color: #1F2937;
-    text-align: center;
-    align-self: center;
-    max-width: 40%;
-}
+    .third-section {
+        background-color: #e5e7eb;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
 
-.author {
-    font-size: 18px;
-    display: flex;
-    align-self: end;
-    margin-right: 600px
-}
+    .quotetext {
+        font-size: 28px;
+        font-style: italic;
+        font-weight: lighter;
+        color: #1F2937;
+        text-align: center;
+        align-self: center;
+        max-width: 40%;
+    }
 
-.fourth-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
+    .author {
+        font-size: 18px;
+        display: flex;
+        align-self: end;
+        margin-right: 600px
+    }
 
-.modal {
-    background-color: #3882F6;
-    border-radius: 7px;
-    padding: 40px 80px;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    max-width: 40vw;
-    width: 80%;
-    margin: 0 auto;
-}
+    .fourth-section {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 
-.textcontainer {
-    display: flex;
-    flex-direction: column;
-}
+    .modal {
+        background-color: #3882F6;
+        border-radius: 7px;
+        padding: 40px 80px;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        max-width: 40vw;
+        width: 80%;
+        margin: 0 auto;
+    }
 
-.heading {
-    font-weight: 900;
-    font-size: 20px;
-    color: white;
-}
+    .textcontainer {
+        display: flex;
+        flex-direction: column;
+    }
 
-.text {
-    color: #e5e7eb
-}
+    .heading {
+        font-weight: 900;
+        font-size: 20px;
+        color: white;
+    }
 
-button {
-    background-color: #3882F6;
-    color: white;
-    border-radius: 7px;
-    padding: 6px 25px;
-    border: white 1px solid;
-    cursor: pointer;
-}
+    .text {
+        color: #e5e7eb
+    }
 
-button:hover {
-    transition: transform .15s ease-in-out;
-    transform: scale(1.2)
-}
+    button {
+        background-color: #3882F6;
+        color: white;
+        border-radius: 7px;
+        padding: 6px 25px;
+        border: white 1px solid;
+        cursor: pointer;
+    }
 
-.footer {
-    display: flex;
-    /* flex-direction: column; */
-    flex-shrink: 0.33;
-    color: white;
-    justify-content: center;
-    align-items: center;
-    min-height: 10vh;
-}
+    .product-image:hover, .logo:hover {
+        transition: transform .3s ease-in-out;
+        transform: scale(1.2)
+    }
 
-.footer a {
-    margin: 0 3px
-}
+    button:hover {
+        transition: transform .15s ease-in-out;
+        transform: scale(1.2)
+    }
+
+    .footer {
+        display: flex;
+        /* flex-direction: column; */
+        flex-shrink: 0.33;
+        color: white;
+        justify-content: center;
+        align-items: center;
+        min-height: 10vh;
+    }
+
+    .footer a {
+        margin: 0 3px
+    }
